--- a/i18n/translations.ja.json
+++ b/i18n/translations.ja.json
@@ -3,7 +3,7 @@
     "notation": "表記",
     "caption_classdiagram": "クラス図",
     "caption_sequencediagram": "シーケンス図",
-    "tutorial": "ある会員制のホテルは15部屋保有しています．予約は一人の会員に対して，1回に1部屋だけ受け付けます．適切なクラス図を描きましょう．",
+    "tutorial": "Animal(動物)クラスにはage(年齢:+int)とgender(性別:+string)があり，isMammal(哺乳類かどうか:+), mate(つがいかどうか:+)を取得する操作があります．Animalの子クラスにはDuck(あひる)とFish(魚)とZebra(しまうま)がいます．あひるはbeakColor(クチバシの色:+string)を属性にもち，swim(泳ぐ:+)したりquack(ガーガー鳴く:+)したりすることができます．魚はsizeInFeet(体長:-int)という外部から参照できない属性を持ち，canEat(食用可:-)かどうか調べることができます．しまうまはis_wild(野生かどうか:+bool)を属性に持ち，run(走る:+)ことができます．適切なクラス図を描きましょう．",
     "correct_message": "おめでとうございます🎉 間違いは一つも見つかりませんでした",
     "wrong_message": "残念😭 正答例は下記の通り",
     "proceed_quiz": "おかわり！"
